solve class visible and visible-popUp conflict

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -808,7 +808,7 @@
   z-index: 6;
 }
 
-.visible {
+.visible-popUp {
   display: flex;
   animation: popUpAnimation ease-in-out 0.8s;
 }
