--- a/src/scss/pop-up.scss
+++ b/src/scss/pop-up.scss
@@ -57,7 +57,7 @@
   }
 }
 
-.visible {
+.visible-popUp {
   display: flex;
   animation: popUpAnimation ease-in-out 0.8s;
 }
